--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2.3",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "munafio/chatify": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
