--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2.3",
         "laravel/tinker": "^2.5",
-        "munafio/chatify": "^1.3"
+        "munafio/chatify": "^1.3",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
