--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "laravel-echo": "^1.11.7",
+        "pusher-js": "^7.1.1-beta"
     }
 }
